@@ -44,24 +44,35 @@
         <tag>HEAD</tag>
     </scm>
 
+    <repositories>
+        <repository>
+            <id>repository.spring.milestone</id>
+            <name>Spring Milestone Repository</name>
+            <url>https://repo.spring.io/milestone/</url>
+        </repository>
+    </repositories>
+
     <properties>
-        <jdk.min.version>11</jdk.min.version>
-        <jdk.release.version>11</jdk.release.version>
-        <version.io.spring>5.3.20</version.io.spring>
-        <version.io.spring.security>5.7.1</version.io.spring.security>
-        <version.io.spring.session>2.7.0</version.io.spring.session>
+        <jdk.min.version>17</jdk.min.version>
+        <jdk.release.version>17</jdk.release.version>
+        <jdk.runtime.args>--add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED</jdk.runtime.args>
+
+        <version.io.spring>6.0.0-RC4</version.io.spring>
+        <version.io.spring.security>6.0.0-RC2</version.io.spring.security>
+        <version.io.spring.session>3.0.0-RC1</version.io.spring.session>
         <version.jakarta.annotation>1.3.5</version.jakarta.annotation>
-        <version.jakarta.servlet>4.0.3</version.jakarta.servlet>
+        <version.jakarta.servlet>5.0.0</version.jakarta.servlet>
+        <version.net.jcip.annotations>1.0</version.net.jcip.annotations>
         <version.org.apache.httpcomponents>5.1.3</version.org.apache.httpcomponents>
-        <version.org.apache.tomcat>9.0.62</version.org.apache.tomcat>
-        <version.org.infinispan>13.0.10.Final</version.org.infinispan>
-        <version.org.infinispan.protostream>4.4.3.Final</version.org.infinispan.protostream>
+        <version.org.apache.tomcat>10.0.27</version.org.apache.tomcat>
+        <version.org.infinispan>14.0.2.Final</version.org.infinispan>
+        <version.org.infinispan.protostream>4.5.0.Final</version.org.infinispan.protostream>
         <version.org.infinispan.server>${version.org.infinispan}</version.org.infinispan.server>
         <version.org.jboss.arquillian>1.6.0.Final</version.org.jboss.arquillian>
         <version.org.jboss.arquillian.container.tomcat>1.1.0.Final</version.org.jboss.arquillian.container.tomcat>
-        <version.org.jboss.marshalling>2.0.12.Final</version.org.jboss.marshalling>
+        <version.org.jboss.marshalling>2.1.1.Final</version.org.jboss.marshalling>
         <version.org.kohsuke.metainf-services>1.9</version.org.kohsuke.metainf-services>
-        <version.org.wildfly>27.0.0.Alpha1</version.org.wildfly>
+        <version.org.wildfly>27.0.0.Final</version.org.wildfly>
         <version.junit>4.13.2</version.junit>
     </properties>
 
@@ -119,6 +130,13 @@
                     <tagNameFormat>@{project.version}</tagNameFormat>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>${jdk.runtime.args}</argLine>
+                </configuration>
+            </plugin>
         </plugins>
         <pluginManagement>
             <plugins>
@@ -144,6 +162,11 @@
                 <version>${version.jakarta.servlet}</version>
             </dependency>
             <dependency>
+                <groupId>net.jcip</groupId>
+                <artifactId>jcip-annotations</artifactId>
+                <version>${version.net.jcip.annotations}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.apache.httpcomponents.client5</groupId>
                 <artifactId>httpclient5</artifactId>
                 <version>${version.org.apache.httpcomponents}</version>
@@ -155,14 +178,13 @@
             </dependency>
             <dependency>
                 <groupId>org.infinispan</groupId>
-                <artifactId>infinispan-client-hotrod</artifactId>
+                <artifactId>infinispan-client-hotrod-jakarta</artifactId>
                 <version>${version.org.infinispan}</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>org.jboss.spec.javax.transaction</groupId>
-                        <artifactId>jboss-transaction-api_1.2_spec</artifactId>
-                    </exclusion>
-                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.infinispan</groupId>
+                <artifactId>infinispan-core-jakarta</artifactId>
+                <version>${version.org.infinispan}</version>
             </dependency>
             <dependency>
                 <groupId>org.infinispan</groupId>
@@ -239,6 +261,11 @@
             </dependency>
             <dependency>
                 <groupId>org.wildfly</groupId>
+                <artifactId>wildfly-clustering-context</artifactId>
+                <version>${version.org.wildfly}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.wildfly</groupId>
                 <artifactId>wildfly-clustering-infinispan-client-spi</artifactId>
                 <version>${version.org.wildfly}</version>
             </dependency>
@@ -256,7 +283,6 @@
                 <groupId>org.wildfly</groupId>
                 <artifactId>wildfly-clustering-marshalling-api</artifactId>
                 <version>${version.org.wildfly}</version>
-                <classifier>tests</classifier>
             </dependency>
             <dependency>
                 <groupId>org.wildfly</groupId>
@@ -289,6 +315,11 @@
             <dependency>
                 <groupId>org.wildfly</groupId>
                 <artifactId>wildfly-clustering-server-infinispan</artifactId>
+                <version>${version.org.wildfly}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.wildfly</groupId>
+                <artifactId>wildfly-clustering-web-api</artifactId>
                 <version>${version.org.wildfly}</version>
             </dependency>
             <dependency>
